clusters/hybrid01/config/mastodon/mastodon-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mastodon
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
