clusters/hybrid01/config/mastodon/mastodon-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mastodon
  namespace: mastodon
  labels:
    app: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodon
  template:
    metadata:
      labels:
        app: mastodon
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://openbao.openbao.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-skip-verify: "false" 
        vault.security.banzaicloud.io/vault-role: "mastodon"
    spec:
      hostUsers: false
      securityContext:
        fsGroup: 991
      serviceAccountName: mastodon-openbao
      containers:
      - name: mastodon
        image: ghcr.io/mastodon/mastodon:v4.7.3
        command: 
        - "bundle"
        args:
        - "exec"
        - "rails"
        - "server"
        ports:
        - name: mastodon
          protocol: TCP
          containerPort: 3000
        resources:
          requests:
            cpu: 10m
            memory: 900M
          limits:
            memory: 1500M
        volumeMounts:
        - name: mastodon-media
          mountPath: /opt/mastodon/public/system
      - name: sidekiq
        image: ghcr.io/mastodon/mastodon:v4.7.3
        command:
        - "bundle"
        args:
        - "exec"
        - "sidekiq"
        resources:
          requests:
            cpu: 10m
            memory: 500M
          limits:
            memory: 1000M
        volumeMounts:
        - name: mastodon-media
          mountPath: /opt/mastodon/public/system
      volumes:
      - name: mastodon-media
        persistentVolumeClaim:
          claimName: mastodon-media
