clusters/hybrid01/config/mastodon/mastodon-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon
  namespace: mastodon
  labels:
    app: mastodon
spec:
  type: ClusterIP
  selector:
    app: mastodon
  ports:
    - name: mastodon
      protocol: TCP
      port: 3000
      targetPort: mastodon
